try to make fixed background work on iOS Safari

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ body {
   background-size: cover;
 }
 
+#background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/loch-ness.jpg) 0 0 no-repeat fixed !important;
+  background-size: contain;
+}
 
 header {
   width: 100%;
